...
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey7"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="7">
...
                                        <rect key="frame" x="150" y="0.0" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey8"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="8">
...
                                        <rect key="frame" x="450" y="0.0" width="150" height="105"/>
                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKeyAdd"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="+">
...
                                        <rect key="frame" x="0.0" y="105" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey4"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="4">
...
                                        <rect key="frame" x="150" y="105" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="5">
...
                                        <rect key="frame" x="300" y="105" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey6"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="6">
...
                                        <rect key="frame" x="450" y="105" width="150" height="105"/>
                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKeySubstract"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="-">
...
                                        <rect key="frame" x="0.0" y="210" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey1"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="1">
...
                                        <rect key="frame" x="150" y="210" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey2"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="2">
...
                                        <rect key="frame" x="300" y="210" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey3"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="3">
...
                                        <rect key="frame" x="450" y="210" width="150" height="210"/>
                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKeyEqual"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="=">
...
                                        <rect key="frame" x="0.0" y="315" width="300" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey0"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="0">
...
                                        <rect key="frame" x="300" y="315" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKeyPoint"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title=".">
...
                                        <rect key="frame" x="300" y="0.0" width="150" height="105"/>
                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnKey9"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <state key="normal" title="9">
...
